[package]

name = "bencode"
version = "0.1.16"
authors = ["Arjan Topolovec <arjan.top@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/arjantop/rust-bencode"
repository = "https://github.com/arjantop/rust-bencode"
description = "Bencode library for easy encoding/decoding"
documentation = "https://docs.rs/crate/bencode"
keywords = ["bencode", "encoding", "decoding"]

[features]

nightly = []

[lib]

name = "bencode"

[dependencies]

rustc-serialize = "0.3"
byteorder = "1.0"
num-traits = "0.1"

